// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SensorsListRow Long Fields 1`] = `
<div>
  <li
    className="list-none"
  >
    <a
      className="flex flex-wrap md:grid gap-2 md:gap-8 p-4 md:py-2 grid-cols-1 focus-offset md:grid-cols-[5fr,2fr,2fr,140px] xl:grid-cols-[5fr,2fr,2fr,4fr,140px] bg-white md:justify-between group border border-white border-b-gray-100 hover:animate-borderpulse hover:z-10 cursor-pointer transition-all relative group md:items-center"
      href="/sensors/12"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="When Array is given multiple arguments - Temperatur Sensor von Atahualpa Yupanqui De la Vega Van Hilde"
    >
      <div
        className="grid grid-cols-[24px,1fr] w-full gap-3 items-center"
      >
        <span
          className=" inline-block bg-gray-50 w-6 h-6"
        >
          <img
            alt="Sensor Symbol 1"
            src="/images/sensor-symbols/1.svg"
          />
        </span>
        <h3
          className="text-xl leading-6 pt-1 md:whitespace-nowrap md:leading-7 md:pt-0 font-headline font-bold block md:truncate"
        >
          When Array is given multiple arguments
        </h3>
      </div>
      <p
        className="inline-grid md:grid grid-cols-[16px,1fr] gap-2 items-center"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 17,
              "width": 17,
            }
          }
        >
          <svg
            fill="none"
            height={16}
            viewBox="0 0 80 80"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <mask
              height={80}
              id="mask0"
              mask-type="alpha"
              maskUnits="userSpaceOnUse"
              width={80}
              x={0}
              y={0}
            >
              <rect
                fill="white"
                height={80}
                rx={160}
                width={80}
              />
            </mask>
            <g
              mask="url(#mask0)"
            >
              <rect
                fill="#8330FF"
                height={10}
                width={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                y={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                y={50}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                y={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
                y={10}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={40}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={20}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
                y={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={40}
                y={10}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={40}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={40}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
                y={40}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={40}
                y={50}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={40}
                y={60}
              />
              <rect
                fill="#1E1A5A"
                height={10}
                width={10}
                x={40}
                y={70}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={60}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={30}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={60}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={60}
                y={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={20}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={10}
                y={30}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={10}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={60}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={10}
                y={70}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={30}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={30}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={40}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={30}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={30}
                y={70}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={50}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={20}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={50}
                y={30}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={40}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={50}
                y={50}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={50}
                y={60}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={50}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={50}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={70}
                y={60}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={70}
                y={70}
              />
            </g>
          </svg>
        </span>
        <span
          className="inline-block truncate whitespace-nowrap text-sm text-gray-600 leading-4 mt-0.5"
        >
          Atahualpa Yupanqui De la Vega Van Hilde
        </span>
      </p>
      <p
        className="inline-grid md:grid grid-cols-[16px,1fr] gap-2 items-center"
      >
        <svg
          className="text-gray-500"
          height="16"
          role="img"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 0a3 3 0 0 1 2.995 2.824L9 3l.001 5.124.128.117a4.48 4.48 0 0 1 1.344 2.761l.02.248.007.25c0 2.506-1.968 4.5-4.5 4.5-2.543 0-4.6-2.005-4.6-4.5 0-1.208.488-2.333 1.32-3.16l.17-.16.11-.094V3A3 3 0 0 1 5.65.02l.174-.015L6 0Zm0 2a1 1 0 0 0-.993.883L5 3v6.13l-.456.295A2.469 2.469 0 0 0 3.4 11.5C3.4 12.879 4.55 14 6 14c1.422 0 2.5-1.093 2.5-2.5 0-.786-.34-1.494-.916-1.957l-.148-.11L7 9.135 7 3a1 1 0 0 0-1-1Zm7 4a1 1 0 0 1 0 2h-2a1 1 0 1 1 0-2h2Zm0-4a1 1 0 0 1 0 2h-2a1 1 0 1 1 0-2h2Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
        <span
          className="inline-block truncate whitespace-nowrap text-sm text-gray-600 leading-4 mt-0.5"
        >
          Temperatur
        </span>
      </p>
      <p
        className="text-sm text-gray-600 break-words md:hidden xl:block"
      >
        
        @wdanxna
         when Array is given multiple arguments, it iterates over the ...
      </p>
      <div
        className="w-full xl:w-[140px] h-[72px] relative flex-shrink-0 flex-grow-0 justify-self-end"
      >
        <div
          className="w-full h-[76px] relative flex-shrink-0 flex-grow-0 justify-self-end"
        >
          <span
            className="absolute bottom-0 left-0 text-xs text-gray-300"
          >
            Zul. vor einem Jahr
          </span>
          <span
            className="absolute top-0 right-0 bg-white text-xs text-purple font-mono font-semibold px-0.5 py-[1px] border border-gray-200 leading-3"
          >
            27.848
          </span>
          <svg
            className="block w-full text-purple group-hover:animate-textpulse"
            height={76}
            preserveAspectRatio="none"
            viewBox="0 0 140 76"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              shapeRendering="geometricPrecision"
              stroke="#CFD0DC"
              strokeLinecap="round"
              strokeWidth={2}
              vectorEffect="non-scaling-stroke"
              x1={140}
              x2={140}
              y1={33.6638683127572}
              y2={2}
            />
            <path
              className="visx-linepath"
              d="M0,24.419423868312755L7.368421052631579,49.653333333333336L14.736842105263158,47.79654320987654L22.105263157894736,49.03703703703704L29.473684210526315,25.7283950617284L36.84210526315789,24L44.21052631578947,26.186666666666667L51.57894736842105,50.66732510288066L58.94736842105263,52L66.3157894736842,52L73.68421052631578,51.00049382716049L81.05263157894737,50.11950617283951L88.42105263157895,49.74024691358024L95.78947368421053,51.94205761316872L103.1578947368421,50.290699588477366L110.52631578947368,48.75061728395062L117.89473684210526,47.71358024691358L125.26315789473685,47.759670781893L132.6315789473684,49.10288065843621L140,33.6638683127572"
              fill="transparent"
              shapeRendering="geometricPrecision"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth={2}
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </div>
      </div>
    </a>
  </li>
</div>
`;

exports[`Storyshots UI Elements/SensorsListRow Minimal Fields 1`] = `
<div>
  <li
    className="list-none"
  >
    <a
      className="flex flex-wrap md:grid gap-2 md:gap-8 p-4 md:py-2 grid-cols-1 focus-offset md:grid-cols-[5fr,2fr,2fr,140px] xl:grid-cols-[5fr,2fr,2fr,4fr,140px] bg-white md:justify-between group border border-white border-b-gray-100 hover:animate-borderpulse hover:z-10 cursor-pointer transition-all relative group md:items-center"
      href="/sensors/12"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="AOL - Luftdruck Sensor von Atahualpa Yupanqui De la Vega Van Hilde"
    >
      <div
        className="grid grid-cols-[24px,1fr] w-full gap-3 items-center"
      >
        <span
          className=" inline-block bg-gray-50 w-6 h-6"
        >
          <img
            alt="Sensor Symbol 32"
            src="/images/sensor-symbols/32.svg"
          />
        </span>
        <h3
          className="text-xl leading-6 pt-1 md:whitespace-nowrap md:leading-7 md:pt-0 font-headline font-bold block md:truncate"
        >
          AOL
        </h3>
      </div>
      <p
        className="inline-grid md:grid grid-cols-[16px,1fr] gap-2 items-center"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 17,
              "width": 17,
            }
          }
        >
          <svg
            fill="none"
            height={16}
            viewBox="0 0 80 80"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <mask
              height={80}
              id="mask0"
              mask-type="alpha"
              maskUnits="userSpaceOnUse"
              width={80}
              x={0}
              y={0}
            >
              <rect
                fill="white"
                height={80}
                rx={160}
                width={80}
              />
            </mask>
            <g
              mask="url(#mask0)"
            >
              <rect
                fill="#8330FF"
                height={10}
                width={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                y={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                y={50}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                y={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
                y={10}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={40}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={20}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
                y={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={40}
                y={10}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={40}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={40}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
                y={40}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={40}
                y={50}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={40}
                y={60}
              />
              <rect
                fill="#1E1A5A"
                height={10}
                width={10}
                x={40}
                y={70}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={60}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={30}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={60}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={60}
                y={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={20}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={10}
                y={30}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={10}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={60}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={10}
                y={70}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={30}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={30}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={40}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={30}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={30}
                y={70}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={50}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={20}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={50}
                y={30}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={40}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={50}
                y={50}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={50}
                y={60}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={50}
                y={70}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={50}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={70}
                y={60}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={70}
                y={70}
              />
            </g>
          </svg>
        </span>
        <span
          className="inline-block truncate whitespace-nowrap text-sm text-gray-600 leading-4 mt-0.5"
        >
          Atahualpa Yupanqui De la Vega Van Hilde
        </span>
      </p>
      <p
        className="inline-grid md:grid grid-cols-[16px,1fr] gap-2 items-center"
      >
        <svg
          className="text-gray-500"
          height="16"
          role="img"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a8 8 0 0 1 7.784 9.856l-.08.305-.083.278-.14.402-.059.15-.075.18-.123.27-.114.23a8.005 8.005 0 0 1-.718 1.14l-.237.3-.198.229-.139.15-.14.146-.299.286-.238.208-.243.196-.148.112-.193.138-.112.076a8.008 8.008 0 0 1-.972.557l-.17.079-.356.152-.25.094-.336.112-.34.096-.337.08-.495.09-.205.028-.305.032-.166.012c-.17.01-.34.016-.513.016l-.258-.004-.32-.017-.2-.016-.206-.023-.264-.037-.276-.048-.355-.077-.276-.072-.42-.13-.304-.11-.253-.102a7.957 7.957 0 0 1-.982-.501l-.167-.103-.276-.184-.193-.138-.256-.198-.314-.265-.214-.198-.144-.141-.19-.197-.213-.24-.103-.123A8.012 8.012 0 0 1 .89 11.67l-.157-.321-.08-.178-.134-.33-.105-.294-.105-.336A8 8 0 0 1 8 0Zm0 2a6 6 0 0 0-5.658 8h11.316A6 6 0 0 0 8 2Zm2.643 1.755a1 1 0 0 1 .318 1.378l-2.12 3.392a1 1 0 0 1-1.695-1.06l2.12-3.392a1 1 0 0 1 1.377-.318ZM4 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2Zm8 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM7 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
        <span
          className="inline-block truncate whitespace-nowrap text-sm text-gray-600 leading-4 mt-0.5"
        >
          Luftdruck
        </span>
      </p>
      <div
        className="hidden xl:block"
      />
      <div
        className="w-full xl:w-[140px] h-[72px] relative flex-shrink-0 flex-grow-0 justify-self-end"
      >
        <div
          className="w-full h-[76px] relative flex-shrink-0 flex-grow-0 justify-self-end"
        >
          <span
            className="absolute bottom-0 left-0 text-xs text-gray-300"
          >
            Keine Daten
          </span>
        </div>
      </div>
    </a>
  </li>
</div>
`;

exports[`Storyshots UI Elements/SensorsListRow No Map 1`] = `
<div>
  <li
    className="list-none"
  >
    <a
      className="flex flex-wrap md:grid gap-2 md:gap-8 p-4 md:py-2 grid-cols-1 focus-offset md:grid-cols-[5fr,2fr,2fr,140px] xl:grid-cols-[5fr,2fr,2fr,4fr,140px] bg-white md:justify-between group border border-white border-b-gray-100 hover:animate-borderpulse hover:z-10 cursor-pointer transition-all relative group md:items-center"
      href="/sensors/12"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="LUFTY AAB3 - Luftfeuchtigkeit Sensor von Vogelino"
    >
      <div
        className="grid grid-cols-[24px,1fr] w-full gap-3 items-center"
      >
        <span
          className=" inline-block bg-gray-50 w-6 h-6"
        >
          <img
            alt="Sensor Symbol 15"
            src="/images/sensor-symbols/15.svg"
          />
        </span>
        <h3
          className="text-xl leading-6 pt-1 md:whitespace-nowrap md:leading-7 md:pt-0 font-headline font-bold block md:truncate"
        >
          LUFTY AAB3
        </h3>
      </div>
      <p
        className="inline-grid md:grid grid-cols-[16px,1fr] gap-2 items-center"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 17,
              "width": 17,
            }
          }
        >
          <svg
            fill="none"
            height={16}
            viewBox="0 0 80 80"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <mask
              height={80}
              id="mask0"
              mask-type="alpha"
              maskUnits="userSpaceOnUse"
              width={80}
              x={0}
              y={0}
            >
              <rect
                fill="white"
                height={80}
                rx={160}
                width={80}
              />
            </mask>
            <g
              mask="url(#mask0)"
            >
              <rect
                fill="#0000C2"
                height={10}
                width={10}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={20}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={50}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={70}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                y={10}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                y={30}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={50}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={60}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={20}
                y={40}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={50}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={20}
                y={60}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={20}
                y={70}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={40}
                y={20}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={40}
                y={30}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={40}
                y={40}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={40}
                y={50}
              />
              <rect
                fill="#B4B4C7"
                height={10}
                width={10}
                x={40}
                y={60}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={40}
                y={70}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={60}
                y={10}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={60}
                y={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={30}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={60}
                y={40}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={60}
                y={50}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={60}
                y={60}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={60}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
                y={10}
              />
              <rect
                fill="#B4B4C7"
                height={10}
                width={10}
                x={10}
                y={20}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={10}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
                y={40}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={10}
                y={50}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={10}
                y={60}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={10}
                y={70}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={30}
                y={10}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={30}
                y={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={30}
                y={40}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={30}
                y={50}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={30}
                y={60}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={30}
                y={70}
              />
              <rect
                fill="#787696"
                height={10}
                width={10}
                x={50}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={50}
                y={20}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={50}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={50}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={50}
                y={50}
              />
              <rect
                fill="#332F66"
                height={10}
                width={10}
                x={50}
                y={60}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={10}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={70}
                y={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={30}
              />
              <rect
                fill="#F2F3F8"
                height={10}
                width={10}
                x={70}
                y={40}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={70}
                y={50}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={70}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={70}
                y={70}
              />
            </g>
          </svg>
        </span>
        <span
          className="inline-block truncate whitespace-nowrap text-sm text-gray-600 leading-4 mt-0.5"
        >
          Vogelino
        </span>
      </p>
      <p
        className="inline-grid md:grid grid-cols-[16px,1fr] gap-2 items-center"
      >
        <svg
          className="text-gray-500"
          height="16"
          role="img"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8 .013-.74.814C3.77 4.667 2 7.675 2 10c0 3.412 2.76 6 6 6s6-2.588 6-6c0-2.254-1.664-5.152-4.948-8.826L8 .014Zm-.376 3.43L8 3.007l.111.127C10.716 6.157 12 8.482 12 10c0 2.277-1.837 4-4 4-2.163 0-4-1.723-4-4 0-1.466 1.197-3.684 3.624-6.556Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
        <span
          className="inline-block truncate whitespace-nowrap text-sm text-gray-600 leading-4 mt-0.5"
        >
          Luftfeuchtigkeit
        </span>
      </p>
      <p
        className="text-sm text-gray-600 break-words md:hidden xl:block"
      >
        Luftqualität im Wagon AAB3 vom Ubahn der Linie 3
      </p>
      <div
        className="w-full xl:w-[140px] h-[72px] relative flex-shrink-0 flex-grow-0 justify-self-end"
      >
        <div
          className="w-full h-[76px] relative flex-shrink-0 flex-grow-0 justify-self-end"
        >
          <span
            className="absolute bottom-0 left-0 text-xs text-gray-300"
          >
            Zul. vor einem Jahr
          </span>
          <span
            className="absolute top-0 right-0 bg-white text-xs text-purple font-mono font-semibold px-0.5 py-[1px] border border-gray-200 leading-3"
          >
            27.848
          </span>
          <svg
            className="block w-full text-purple group-hover:animate-textpulse"
            height={76}
            preserveAspectRatio="none"
            viewBox="0 0 140 76"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              shapeRendering="geometricPrecision"
              stroke="#CFD0DC"
              strokeLinecap="round"
              strokeWidth={2}
              vectorEffect="non-scaling-stroke"
              x1={140}
              x2={140}
              y1={35.45335710041593}
              y2={2}
            />
            <path
              className="visx-linepath"
              d="M0,52L10,51.676767676767675L20,50.464646464646464L30,44.51336898395722L40,50.282828282828284L50,24L60,40.63636363636363L70,35.45335710041593L80,51.676767676767675L90,50.464646464646464L100,44.51336898395722L110,50.282828282828284L120,24L130,40.63636363636363L140,35.45335710041593"
              fill="transparent"
              shapeRendering="geometricPrecision"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth={2}
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </div>
      </div>
    </a>
  </li>
</div>
`;
